--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -172,3 +172,11 @@
         \end{itemize}
     }
 }
+
+\newglossaryentry{noop}{
+    name=Noop,
+    text=noop,
+    description={
+        A noop or no-operation is a computer instruction that does nothing, but advances the program counter.
+    }
+}
