--- a/doc/dissertation/resources/evaluation.tex
+++ b/doc/dissertation/resources/evaluation.tex
@@ -11,8 +11,16 @@ This section will include:
 %   - No direct use of environment accesses in basic semantics, requiring indirection.
 %   - Fairly awkward use of the environment (no ability to delete properties, for example). 
 %   - Grammar admits some nonsensical terms such as alternations with semantics not at the top-level. These are ignored by the metacompiler, but are inelegant. Ideally this would not be allowed by the grammar at all.
+% Environment not particularly well thought-out.
+
+% Could have used a FAR more rigorous design process and treated it more like a traditional software project.
+
+% - Funcall and the other special forms are important for the quality of the project.
+% - Discuss what would've otherwise been done in 'future' work -> Show that it is still possible, and indicate how the drive in this direction has been influencing the existing portions of the project. 
+% Error reporting could be far better in some circumstances - more accurate diagnostics would be a great help to the language designer. 
 
 % Contributions
 % Failures
+% Future Work
 
 % chapter evaluation (end)
