--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -77,6 +77,31 @@
 \newcommand{\la}{\langle}
 \newcommand{\ra}{\rangle}
 
+% Some algorithm shorthand
+\newcommand{\Map}[2]{\textbf{map} #1 #2}
+\newcommand{\Reduce}[3]{\textbf{reduce} #1 #2 #3}
+
+\makeatletter
+\newenvironment{breakablealgorithm}
+  {% \begin{breakablealgorithm}
+   \begin{center}
+     \refstepcounter{algorithm}% New algorithm
+     \hrule height.8pt depth0pt \kern2pt% \@fs@pre for \@fs@ruled
+     \renewcommand{\caption}[2][\relax]{% Make a new \caption
+       {\raggedright\textbf{\ALG@name~\thealgorithm} ##2\par}%
+       \ifx\relax##1\relax % #1 is \relax
+         \addcontentsline{loa}{algorithm}{\protect\numberline{\thealgorithm}##2}%
+       \else % #1 is not \relax
+         \addcontentsline{loa}{algorithm}{\protect\numberline{\thealgorithm}##1}%
+       \fi
+       \kern2pt\hrule\kern2pt
+     }
+  }{% \end{breakablealgorithm}
+     \kern2pt\hrule\relax% \@fs@post for \@fs@ruled
+   \end{center}
+  }
+\makeatother
+
 \newcounter{requirementcounter}
 \newcommand*{\reqlabel}[1]{R\refstepcounter{requirementcounter}\therequirementcounter\label{#1}}
 \newcommand*{\reqref}[1]{R\ref{#1}}
